--- a/css/cadastro.css
+++ b/css/cadastro.css
@@ -34,10 +34,9 @@
 }
 .button-primary {
    background-color:var(--black) ;
-   border: none;
    border-radius: 8px;
    border: 2px solid var(--laranja);
-   width: 100%;
+   width: 70%;
    height: 50px;
    color: var(--white);
    font-size: var(--md);
@@ -45,7 +44,10 @@
    text-align: center;
    cursor: pointer;
    margin-top: 15px;
-   margin: bottom 20px;
+   margin-bottom: 20px;
+   display: block;
+   margin-left: auto;
+   margin-right: auto;
     
 }
 .button-primary:hover {
