--- a/css/menu.css
+++ b/css/menu.css
@@ -4,7 +4,7 @@
     --azul-francia:#000250; 
     --azul-marino: #2e42ee;
     --laranja: #ff8000;
-    --sm: 14px;
+    --sm: 12px;
     --md: 16px;
     --lg: 18px;
 }
@@ -26,7 +26,7 @@ body {
 .container .form {
     background: rgba(0, 0, 0, .3);
     width: 100%;
-    max-width: 950px;
+   /* max-width: 950px;*/
     margin: auto;
     padding: 5px 35px;
     margin-top: 36px;
@@ -45,12 +45,9 @@ a {
     text-decoration: none;
     margin-right: 50px;
     margin-top: 20px;
+    margin-bottom: 20px;
 }
 a:hover {
     color: var(--azul-marino);
 }
 
-@media (max-width:480px){
-    .form{width: 100%;
-    } 
-}
